# $Id: Changes,v 1.29 2003/07/20 03:39:09 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.54
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* See the enhancements on extract_links() and failures.

	[ENHANCEMENTS]
	* extract_links() is now an internal-only method, named
	  _extract_links().  If you're using it, don't.  Use
	  find_all_links() instead, which is more flexible.

	* Now, when there is a failure of some kind, certain fields
	  like title, forms and links are cleared out.  Before, you'd
	  have leftover links from the previous page.  I suspect that
	  at least one person out there has been mistakenly relying
	  on this behavior, and his code will now break, but that's
	  a good thing.  See t/failure.t for more.

	[FIXES]
	* No longer tries to tech mech-forms if you're not installing
	  it.

	[DOCUMENTATION]
	* Added a sample CPAN search from Ed Silva.

	
0.53	July 16, 2003
	This version ONLY fixes some test-file problems.  There are no
	functionality enhancements or bug fixes in WWW::Mechanize itself.

	[FIXES]
	* Explicitly stringifies URI::file objects in the *.t files,
	  in hopes of getting the thread bummers fixed.  See RT
	  #2874 and #2880.

0.52	July 7, 2003
	[ENHANCEMENTS]
	* mech-forms now handles local files.
	* Added t/mech-forms.t to test the app
	* Added some parm-checking to submit_form()
	* All the warns are now carps.  Thanks to MJD for pointing
	  it out during his "Tricks Of The Wizards" talk.

	[FIXES]
	* Bumped up the Test::Builder requirement to 0.17, which
	  I hope will get rid of the thread problems with t/tick.t.
	  Thanks to Autrijus Tang for pointing out the note in
	  Builder.pm.

0.51	June 29, 2003
	[ENHANCEMENTS]
	* Added the "mech-forms" command to list all the forms on
	  a given page.

	[FIXES]
	* Made the tick.t test not rely on 2shortplanks.com.

0.50	June 24, 2003
	[ENHANCEMENTS]
	* Mech now does what most browsers do when they handle a
	  redirect: It changes the POST to a GET.  This doesn't match the